<resources>
    <string name="app_name">Office LS</string>
    <string name="tab_title">Office LS</string>
    <string name="tv_link_to_register">Dont have Account? Get one</string>
    <string name="tv_link_to_login">Go sign in</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_pass2">Reenter password</string>
    <string name="hint_name">Full name</string>
    <string name="hint_username">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

    <string name="menu_logout">Log out</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_vew_marks">View marks</string>
    <string name="menu_view">View exercice</string>

    <string name="app_name_with_index">PdfRendererBasic (%1$d/%2$d)</string>
    <string name="info">Info</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="downloadStarted">Download start</string>
    <string name="downloadCompleted">Download complete</string>
    <string name="downloadFailed">Download fail</string>
    <string name="downloadAgain">Download again</string>

    <string name="intro_message">
        <![CDATA[


            This sample demonstrates how to use PdfRenderer to display PDF documents on the screen.


        ]]>
    </string>

</resources>
